Fix chart overflow

--- a/webapp/app-styles/style.less
+++ b/webapp/app-styles/style.less
@@ -58,5 +58,5 @@ a:hover {
 }
 
 .fra-routes__container {
-  width: calc(~"100vw - 268px");
+  width: calc(~"100vw - 256px");
 }
